<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login_message">Login</string>
    <string name="login_name">Login name</string>
    <string name="password_message">password</string>
    <string name="password_name"></string>
    <string name="radiobutton_name">RadioButton</string>
    <string name="checkbox_name">Checkbox</string>
    <string name="switch_name">What does this do?</string>
    <string name="loginButtonLabel">Login</string>
</resources>
