<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.thien.androidlabs.LoginActivity">

    <TextView
        android:layout_width="77dp"
        android:layout_height="16dp"
        android:text="@string/login_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/login_name"
        android:inputType="textEmailAddress"
        android:singleLine="true" />
    <TextView
        android:layout_width="77dp"
        android:layout_height="16dp"
        android:text="@string/password_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/password_name"
        android:inputType="textPassword"
        android:singleLine="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonLabel"
        android:id="@+id/RegisterButton"/>
    <ImageView
        android:id="@+id/iVFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"/>

</LinearLayout>
