<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.thien.androidlabs.ListItemsActivity">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:layout_column="0"
        android:layout_row="0"

        android:text="@string/radiobutton_name"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="0"
        android:gravity="fill"
        android:text="@string/checkbox_name"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="1"
        android:gravity="fill"
        android:text="@string/switch_name"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="1"
        android:gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />

</GridLayout>